# RPI-Score-Celebrator

./: README.md
score_counter/: CMakeLists.txt  README.md
score_counter/apps/: CMakeLists.txt  main.cpp
score_counter/include/score_counter/: core.hpp  data_extraction.hpp  pin_controller.hpp
score_counter/src/: CMakeLists.txt  core.cpp  data_extraction.cpp  pin_controller.cpp
